--- a/k8s-microservice-yaml/config.yaml
+++ b/k8s-microservice-yaml/config.yaml
@@ -4,6 +4,7 @@ kind: Deployment
 metadata:
   name: emailservice
 spec:
+  replicas: 1
   selector:
     matchLabels:
       app: emailservice
@@ -19,7 +20,24 @@ spec:
         - containerPort: 8080
         env:
         - name: PORT
-          value: "8080"
+          value: "8080"        
+        - name: DISABLE_PROFILER  #profiling is turned off — no performance data will be collected or sent
+          value: "1"
+        readinessProbe: # to check container alive or fail only during container start
+          periodSeconds: 5
+          grpc:
+            port: 8080
+        livenessProbe:    # to check container alive or fail only after container start
+          periodSeconds: 5
+          grpc:     #grpc healthcheck probe
+            port: 8080
+        resources:
+          requests:
+            cpu: 100m
+            memory: 64Mi
+          limits:
+            cpu: 200m
+            memory: 128Mi
 ---
 apiVersion: v1
 kind: Service
@@ -40,6 +58,7 @@ kind: Deployment
 metadata:
   name: recommendationservice
 spec:
+  replicas: 1
   selector:
     matchLabels:
       app: recommendationservice
@@ -58,6 +77,21 @@ spec:
           value: "8080"
         - name: PRODUCT_CATALOG_SERVICE_ADDR
           value: "productcatalogservice:3550"
+        readinessProbe:
+          periodSeconds: 5
+          grpc:
+            port: 8080
+        livenessProbe:
+          periodSeconds: 5
+          grpc:         
+            port: 8080
+        resources:
+          requests:
+            cpu: 100m
+            memory: 220Mi
+          limits:
+            cpu: 200m
+            memory: 450Mi
 ---
 apiVersion: v1
 kind: Service
@@ -78,6 +112,7 @@ kind: Deployment
 metadata:
   name: paymentservice
 spec:
+  replicas: 1
   selector:
     matchLabels:
       app: paymentservice
@@ -94,6 +129,24 @@ spec:
         env:
         - name: PORT
           value: "50051"
+        - name: DISABLE_PROFILER
+          value: "1"
+        readinessProbe:
+          periodSeconds: 5
+          grpc:
+            port: 50051
+        livenessProbe:
+          periodSeconds: 5
+          grpc:         
+            port: 50051
+        resources:
+          requests:
+            cpu: 100m
+            memory: 64Mi
+          limits:
+            cpu: 200m
+            memory: 128Mi
+        
 ---
 apiVersion: v1
 kind: Service
@@ -114,6 +167,7 @@ kind: Deployment
 metadata:
   name: productcatalogservice
 spec:
+  replicas: 1
   selector:
     matchLabels:
       app: productcatalogservice
@@ -130,6 +184,23 @@ spec:
         env:
         - name: PORT
           value: "3550"
+        - name: DISABLE_PROFILER
+          value: "1"
+        readinessProbe:
+          periodSeconds: 5
+          grpc:
+            port: 3550
+        livenessProbe:
+          periodSeconds: 5
+          grpc:         
+            port: 3550
+        resources:
+          requests:
+            cpu: 100m
+            memory: 64Mi
+          limits:
+            cpu: 200m
+            memory: 128Mi
 ---
 apiVersion: v1
 kind: Service
@@ -150,6 +221,7 @@ kind: Deployment
 metadata:
   name: currencyservice
 spec:
+  replicas: 1
   selector:
     matchLabels:
       app: currencyservice
@@ -166,6 +238,23 @@ spec:
         env:
         - name: PORT
           value: "7000"
+        - name: DISABLE_PROFILER
+          value: "1"
+        readinessProbe:
+          periodSeconds: 5
+          grpc:
+            port: 7000
+        livenessProbe:
+          periodSeconds: 5
+          grpc:         
+            port: 7000
+        resources:
+          requests:
+            cpu: 100m
+            memory: 64Mi
+          limits:
+            cpu: 200m
+            memory: 128Mi
 ---
 apiVersion: v1
 kind: Service
@@ -186,6 +275,7 @@ kind: Deployment
 metadata:
   name: shippingservice
 spec:
+  replicas: 1
   selector:
     matchLabels:
       app: shippingservice
@@ -202,6 +292,24 @@ spec:
         env:
         - name: PORT
           value: "50051"
+        - name: DISABLE_PROFILER
+          value: "1"
+        readinessProbe:
+          periodSeconds: 5
+          grpc:
+            port: 50051
+        livenessProbe:
+          periodSeconds: 5
+          grpc:         
+            port: 50051
+        resources:
+          requests:
+            cpu: 100m
+            memory: 64Mi
+          limits:
+            cpu: 200m
+            memory: 128Mi
+        
 ---
 apiVersion: v1
 kind: Service
@@ -222,6 +330,7 @@ kind: Deployment
 metadata:
   name: adservice
 spec:
+  replicas: 1
   selector:
     matchLabels:
       app: adservice
@@ -238,6 +347,21 @@ spec:
         env:
         - name: PORT
           value: "9555"
+        livenessProbe:
+          periodSeconds: 5
+          grpc:         
+            port: 9555
+        readinessProbe:
+          periodSeconds: 5
+          grpc:
+            port: 9555
+        resources:
+          requests:
+            cpu: 200m
+            memory: 180Mi
+          limits:
+            cpu: 300m
+            memory: 300Mi
 ---
 apiVersion: v1
 kind: Service
@@ -258,6 +382,7 @@ kind: Deployment
 metadata:
   name: cartservice
 spec:
+  replicas: 1
   selector:
     matchLabels:
       app: cartservice
@@ -276,6 +401,23 @@ spec:
           value: "7070"
         - name: REDIS_ADDR
           value: "redis-cart:6379"
+        - name: DISABLE_PROFILER
+          value: "1"
+        readinessProbe:
+          periodSeconds: 5
+          grpc:
+            port: 7070
+        livenessProbe:
+          periodSeconds: 5
+          grpc:         
+            port: 7070
+        resources:
+          requests:
+            cpu: 100m
+            memory: 64Mi
+          limits:
+            cpu: 200m
+            memory: 128Mi
 ---
 apiVersion: v1
 kind: Service
@@ -296,6 +438,7 @@ kind: Deployment
 metadata:
   name: redis-cart
 spec:
+  replicas: 1
   selector:
     matchLabels:
       app: redis-cart
@@ -309,6 +452,15 @@ spec:
         image: redis:alpine
         ports:
         - containerPort: 6379
+        readinessProbe:
+          initialDelaySeconds: 15
+          periodSeconds: 5
+          grpc:
+            port: 6379
+        livenessProbe:
+          periodSeconds: 5
+          grpc:         
+            port: 6379
         volumeMounts:
         - mountPath: /data
           name: redis-data
@@ -334,6 +486,7 @@ kind: Deployment
 metadata:
   name: checkoutservice
 spec:
+  replicas: 1
   selector:
     matchLabels:
       app: checkoutservice
@@ -362,6 +515,14 @@ spec:
             value: "currencyservice:7000"
           - name: CART_SERVICE_ADDR
             value: "cartservice:7070"
+          readinessProbe:
+          periodSeconds: 5
+          grpc:
+            port: 5050
+          livenessProbe:
+          periodSeconds: 5
+          grpc:         
+            port: 5050
 ---
 apiVersion: v1
 kind: Service
@@ -381,6 +542,7 @@ kind: Deployment
 metadata:
   name: frontend
 spec:
+  replicas: 1
   selector:
     matchLabels:
       app: frontend
@@ -411,13 +573,21 @@ spec:
             value: "checkoutservice:5050"
           - name: AD_SERVICE_ADDR
             value: "adservice:9555"
+          readinessProbe:
+          periodSeconds: 5
+          grpc:
+            port: 8080
+          livenessProbe:
+          periodSeconds: 5
+          grpc:         
+            port: 8080
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: frontend
 spec:
-  type: ClusterIP
+  type: LoadBalabcer
   selector:
     app: frontend
   ports:
@@ -437,5 +607,5 @@ spec:
   - name: http
     port: 80
     targetPort: 8080
-    nodePort: 30007
+   # nodePort: 30007
 
